# sealevel-attacks

./: Anchor.toml  Cargo.toml  README.md
programs/0-signer-authorization/insecure/: Cargo.toml
programs/0-signer-authorization/insecure/src/: lib.rs
programs/0-signer-authorization/recommended/: Cargo.toml
programs/0-signer-authorization/recommended/src/: lib.rs
programs/0-signer-authorization/secure/: Cargo.toml
programs/0-signer-authorization/secure/src/: lib.rs
programs/1-account-data-matching/insecure/: Cargo.toml
programs/1-account-data-matching/insecure/src/: lib.rs
programs/1-account-data-matching/recommended/: Cargo.toml
programs/1-account-data-matching/recommended/src/: lib.rs
programs/1-account-data-matching/secure/: Cargo.toml
programs/1-account-data-matching/secure/src/: lib.rs
programs/10-sysvar-address-checking/insecure/: Cargo.toml
programs/10-sysvar-address-checking/insecure/src/: lib.rs
programs/10-sysvar-address-checking/recommended/: Cargo.toml
programs/10-sysvar-address-checking/recommended/src/: lib.rs
programs/10-sysvar-address-checking/secure/: Cargo.toml
programs/10-sysvar-address-checking/secure/src/: lib.rs
programs/2-owner-checks/insecure/: Cargo.toml
programs/2-owner-checks/insecure/src/: lib.rs
programs/2-owner-checks/recommended/: Cargo.toml
programs/2-owner-checks/recommended/src/: lib.rs
programs/2-owner-checks/secure/: Cargo.toml
programs/2-owner-checks/secure/src/: lib.rs
programs/3-type-cosplay/insecure/: Cargo.toml
programs/3-type-cosplay/insecure/src/: lib.rs
programs/3-type-cosplay/recommended/: Cargo.toml
programs/3-type-cosplay/recommended/src/: lib.rs
programs/3-type-cosplay/secure/: Cargo.toml
programs/3-type-cosplay/secure/src/: lib.rs
programs/4-initialization/insecure/: Cargo.toml
programs/4-initialization/insecure/src/: lib.rs
programs/4-initialization/recommended/: Cargo.toml
programs/4-initialization/recommended/src/: lib.rs
programs/4-initialization/secure/: Cargo.toml
programs/4-initialization/secure/src/: lib.rs
programs/5-arbitrary-cpi/insecure/: Cargo.toml
programs/5-arbitrary-cpi/insecure/src/: lib.rs
programs/5-arbitrary-cpi/recommended/: Cargo.toml
programs/5-arbitrary-cpi/recommended/src/: lib.rs
programs/5-arbitrary-cpi/secure/: Cargo.toml
programs/5-arbitrary-cpi/secure/src/: lib.rs
programs/6-duplicate-mutable-accounts/insecure/: Cargo.toml
programs/6-duplicate-mutable-accounts/insecure/src/: lib.rs
programs/6-duplicate-mutable-accounts/recommended/: Cargo.toml
programs/6-duplicate-mutable-accounts/recommended/src/: lib.rs
programs/6-duplicate-mutable-accounts/secure/: Cargo.toml
programs/6-duplicate-mutable-accounts/secure/src/: lib.rs
programs/7-bump-seed-canonicalization/insecure/: Cargo.toml
programs/7-bump-seed-canonicalization/insecure/src/: lib.rs
programs/7-bump-seed-canonicalization/recommended/: Cargo.toml
programs/7-bump-seed-canonicalization/recommended/src/: lib.rs
programs/7-bump-seed-canonicalization/secure/: Cargo.toml
programs/7-bump-seed-canonicalization/secure/src/: lib.rs
programs/8-pda-sharing/insecure/: Cargo.toml
programs/8-pda-sharing/insecure/src/: lib.rs
programs/8-pda-sharing/recommended/: Cargo.toml
programs/8-pda-sharing/recommended/src/: lib.rs
programs/8-pda-sharing/secure/: Cargo.toml
programs/8-pda-sharing/secure/src/: lib.rs
programs/9-closing-accounts/insecure/: Cargo.toml
programs/9-closing-accounts/insecure-still/: Cargo.toml
programs/9-closing-accounts/insecure-still-still/: Cargo.toml
programs/9-closing-accounts/insecure-still-still/src/: lib.rs
programs/9-closing-accounts/insecure-still/src/: lib.rs
programs/9-closing-accounts/insecure/src/: lib.rs
programs/9-closing-accounts/recommended/: Cargo.toml
programs/9-closing-accounts/recommended/src/: lib.rs
programs/9-closing-accounts/secure/: Cargo.toml
programs/9-closing-accounts/secure/src/: lib.rs
programs/account-data-matching-1/: Cargo.toml
programs/account-data-matching-1/src/: lib.rs
programs/arbitrary-cpi-5/: Cargo.toml
programs/arbitrary-cpi-5/src/: lib.rs
programs/bump-seed-canonicalization-6/: Cargo.toml
programs/bump-seed-canonicalization-6/src/: #lib.rs#  lib.rs
programs/duplicate-mutable-accounts-6/: Cargo.toml
programs/duplicate-mutable-accounts-6/src/: lib.rs
programs/owner-checks-1/: Cargo.toml
programs/owner-checks-1/src/: lib.rs
programs/owner-checks-2/: Cargo.toml
programs/owner-checks-2/src/: lib.rs
programs/reinitialization-4/: Cargo.toml
programs/reinitialization-4/src/: lib.rs
programs/signer-check-0/: Cargo.toml
programs/signer-check-0/src/: lib.rs
programs/type-cosplay-3/: Cargo.toml
programs/type-cosplay-3/src/: lib.rs
tests/: raw.ts
