[workspace]
members = [
    "programs/0-signer-authorization/*",
    "programs/1-account-data-matching/*",
    "programs/2-owner-checks/*",
    "programs/3-type-cosplay/*",
    "programs/4-initialization/*",
    "programs/5-arbitrary-cpi/*",
    "programs/6-duplicate-mutable-accounts/*",
    "programs/7-bump-seed-canonicalization/*",
    "programs/8-pda-sharing/*",
    "programs/9-closing-accounts/*",
    "programs/10-sysvar-address-checking/*"
]
